platform/apps/uptime-kuma/network/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: uptime-kuma-gateway
  namespace: uptime-kuma
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - status.asnk.io

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: uptime-kuma-tls
      hosts:
        - status.asnk.io
