platform/apps/uptime-kuma/network/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: smtp-resend
  namespace: uptime-kuma
spec:
  hosts:
    - smtp.resend.com
  ports:
    - number: 587
      name: smtp
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
